Bug 134688 - LibreOffice grabs focus after error message (gtk3)
Summary: LibreOffice grabs focus after error message (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2020-07-09 11:20 UTC by Xisco Faulí
Modified: 2020-10-25 07:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-07-09 11:20:32 UTC
Steps to reproduce:
1. Open attachment 150442 [details] from bug 124454
2. Select any cell in D2:D6 range
3. Click on the formula bar -> Error message is displayed
4. Close the message
5. Click somewhere else

-> not possible to interact with LibreOffice anymore. if LibreOffice is still responsive, repeat steps 2 to 5 a few times. Not reproducible with gen

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 0695b5f5b328a1bc9cfdc8ba020dbdd674185e04
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-07-09 11:22:06 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8950cb8ae6a1621729ec43a6dd1c29cf04260797

author	Caolán McNamara <caolanm@redhat.com>	2020-02-04 11:34:29 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-06 12:26:37 +0100
commit 8950cb8ae6a1621729ec43a6dd1c29cf04260797 (patch)
tree 2f0a50e6778ab425813ad626e634cd8b233514ca
parent 415c1b05242b80ca883596952caa0e179a07b409 (diff)
weld SvxFontSizeBox_Impl

Bisected with: bibisect-linux64-7.0

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2020-07-09 11:59:16 UTC
I can't reproduce it with the steps in #1 but I can reproduce it with a 
click on cell, click inside font size text area, then click in formula bar
Comment 3 Xisco Faulí 2020-07-09 12:24:01 UTC
(In reply to Caolán McNamara from comment #2)
> I can't reproduce it with the steps in #1 but I can reproduce it with a 
> click on cell, click inside font size text area, then click in formula bar

and what about removing the user profile before launching LibreOffice ( rm -rf instdir/user/ ) ?
Comment 4 Caolán McNamara 2020-07-09 13:41:00 UTC
the dialog gets launched from the button down of the click during the processing of that event which is a maybe a bit problematic in terms of where the button release will get processed
Comment 5 Caolán McNamara 2020-07-09 14:16:05 UTC
https://gerrit.libreoffice.org/c/core/+/98439 works to fix the problem I see, does it make a difference for what you see ?
Comment 6 Commit Notification 2020-07-09 15:00:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ebc2bbba2558dd6fe5cb41b453514211d1fb0c1c

tdf#134688 run error dialog async and keep the events in the one event loop

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-07-09 16:01:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/98e8bb0a5bb9d93fb1ba6476c0fdb1c7277ed68c

tdf#134688 run error dialog async and keep the events in the one event loop

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2020-07-30 13:04:47 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 231e1e416c039d1f9724962a89cf0573a3db48a2
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!