tdf#134688 run error dialog async and keep the events in the one event loop

instead of a sub loop which helps to not lose the mouse release where
the dialog was shown on the mouse press

Change-Id: If0baf15e85aff7a28ca058e2626b58802d0dad08
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98451
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>